<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">MikuMikuDroid</string>
    <string name="app_name">MikuMikuDroid_mod</string>
<string name="select_ok">OK</string><string name="setup_alert_title">Setup alert</string>
<string name="setup_alert_text">Please put toon??.bmp files in MikuMikuDance Ver5.x on /sdcard/MikuMikuDroid/Data/ .</string>


<string name="setup_alert_pmd">Please put PMD files on /sdcard/MikuMikuDroid/UserFile/Model/ .</string><string name="setup_alert_vmd">Please put VMD files on /sdcard/MikuMikuDroid/UserFile/Motion/ .</string><string name="setup_alert_music">Please put sound files on /sdcard/MikuMikuDroid/UserFile/Wave/ .</string><string name="menu_load_model">Load Model</string>
<string name="menu_load_camera">Load Camera</string>
<string name="menu_load_music">Load Music</string>
<string name="menu_play_pause">Play/Pause</string><string name="menu_load_motion">Load Motion</string>
<string name="menu_rewind">Rewind</string>
<string name="menu_initialize">Initialize</string>




<string name="menu_toggle_physics">Physics ON/OFF</string>




<string name="pref_key_antialias">setting_antialias</string>




<string name="pref_title_antialias">Anti Aliasing</string>




<string name="pref_summary_antialias">Remove blocky edges. Not work with some devices. Need to restart the app to apply.</string>




<string name="menu_settings">Settings</string>




<string name="pref_key_save_last_state">setting_save_last_state</string>




<string name="pref_title_save_last_state">Remember Last State</string>




<string name="pref_summary_save_last_state">Save the last viewed state and restore it automatically on startup.</string>




<string name="pref_key_background_type">setting_background_type</string>




<string name="pref_title_background_type">Background</string>




<string name="pref_summary_background_type">Set a background color/image to display. Need to restart the app to apply.</string>




<string name="menu_toggle_repeat">Repeat ON/OFF</string>
<string name="menu_take_picture">Take Picture</string>
<string name="toast_picture_taken">Took a picture and saved at: %s</string>
<string name="toast_picture_failed">Failed to take picture</string>
<string name="toast_picture_discarded">Picture discarded</string>
<string name="button_discard_picture">Discard</string>
<string name="button_open_gallery">Open With Gallery</string>
<string name="dialog_restore_state">Restoring Previous state...</string>
<string name="dialog_load_model_motion">Loading Model/Motion...</string>
<string name="dialog_load_as_bg">Load as Background</string>
<string name="toast_picture_busy">Processing now...</string>

<string name="pref_key_stereo3d">setting_stereo3d</string>
<string name="pref_title_stereo3d">Enable Stereo 3D</string>
<string name="pref_key_parallax_factor">setting_parallax_factor</string>
<string name="pref_title_parallax_factor">3D Parallax</string>
<string name="pref_summary_parallax_factor">Strength of stereo 3D parallax</string>

<string name="dialog_gles20_unavailable">OpenGL ES 2.0 is not available in your device. The animations WILL be broken.</string>
</resources>
